[package]
name = "hrt-infographer"
description = "A tool for aggregating your path requests in a visually digestible way"
version = "0.1.0"
edition = "2024"
authors = ["Aria <hello@aria.coffee>"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = "thin"

# For perf testing reasons
[profile.release-full-lto]
inherits = "release"
lto = true

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
lopdf = "0.39.0"
oxidize-pdf = "1.7.1"
serde = { version = "1.0.228", features = ["derive"] }
